// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`updateDebuggersGraphicData > should handle multiple debuggers 1`] = `
[
  {
    "bufferPointer": 0,
    "height": 16,
    "id": "var1",
    "memory": {
      "byteAddress": 20,
      "default": 0,
      "elementWordSize": 1,
      "id": "var1",
      "isInteger": true,
      "isPointer": false,
      "isPointingToInteger": false,
      "isPointingToPointer": false,
      "numberOfElements": 1,
      "type": 0,
      "wordAlignedAddress": 5,
      "wordAlignedSize": 1,
    },
    "showAddress": false,
    "showBinary": false,
    "showEndAddress": false,
    "width": 16,
    "x": 144,
    "y": 0,
  },
  {
    "bufferPointer": 0,
    "height": 16,
    "id": "var2",
    "memory": {
      "byteAddress": 24,
      "default": 0,
      "elementWordSize": 1,
      "id": "var2",
      "isInteger": true,
      "isPointer": false,
      "isPointingToInteger": false,
      "isPointingToPointer": false,
      "numberOfElements": 1,
      "type": 0,
      "wordAlignedAddress": 6,
      "wordAlignedSize": 1,
    },
    "showAddress": false,
    "showBinary": false,
    "showEndAddress": false,
    "width": 16,
    "x": 144,
    "y": 16,
  },
]
`;

exports[`updateDebuggersGraphicData > should position debuggers at correct y coordinate based on line number 1`] = `
{
  "bufferPointer": 0,
  "height": 16,
  "id": "myVar",
  "memory": {
    "byteAddress": 20,
    "default": 0,
    "elementWordSize": 1,
    "id": "myVar",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "numberOfElements": 1,
    "type": 0,
    "wordAlignedAddress": 5,
    "wordAlignedSize": 1,
  },
  "showAddress": false,
  "showBinary": false,
  "showEndAddress": false,
  "width": 16,
  "x": 152,
  "y": 32,
}
`;
